# visp_naoqi_ros

./: CMakeLists.txt  package.xml
config/: robot_config.yaml
data/objects/tabasco_green/: grasping_pose_blob.xml
launch/: dummy_robot.launch  romeo_cmd_vel.launch
src/: main.cpp  visp_naoqi_robot.cpp  visp_naoqi_robot.h
src/tools/: convert_vph_to_pose.cpp
